--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.4",
+    "fs": "^0.0.1-security",
     "immer": "^9.0.14",
     "polished": "^4.2.2",
     "prop-types": "^15.8.1",
@@ -33,6 +34,7 @@
     "redux": "4.1.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "selenium-webdriver": "^4.4.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
